Bug 153434 - crash clicking on "tools -> macro -> manage macro -> basic -> new"
Summary: crash clicking on "tools -> macro -> manage macro -> basic -> new"
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
7.4.5.1 release
Hardware: x86-64 (AMD64) other
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.6.0 target:7.5.1 target:7.4.6
Keywords:
Depends on:
Blocks:
 
Reported: 2023-02-07 11:22 UTC by PowaBanga
Modified: 2023-02-08 15:26 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description PowaBanga 2023-02-07 11:22:33 UTC
Hi everybody,
I am on archlinux, with libreoffice the package libreoffice-still-fr 7.4.5-1

when i do this : "tools -> macro -> manage macro -> basic -> new"

i recieve a popup message from libreoffice saying that because of a crash, libreoffice will save all my current file for that i can recover them. And it restart recovering my files.

here the console output :
```
libreoffice --impress 

(soffice:11334): Gtk-CRITICAL **: 12:20:13.797: gtk_tree_store_get_path: assertion 'iter->user_data != NULL' failed

(soffice:11334): Gtk-CRITICAL **: 12:20:13.797: gtk_tree_path_get_depth: assertion 'path != NULL' failed

(soffice:11334): Gtk-CRITICAL **: 12:20:13.797: gtk_tree_store_get_value: assertion 'VALID_ITER (iter, tree_store)' failed

(soffice:11334): GLib-GObject-WARNING **: 12:20:13.798: ../glib/gobject/gtype.c:4335: type id '0' is invalid

(soffice:11334): GLib-GObject-WARNING **: 12:20:13.798: can't peek value table for type '<invalid>' which is not currently referenced
```
Comment 1 Julien Nabet 2023-02-07 19:55:33 UTC
On pc Debian x86-64 with master sources updated today, I don't reproduce this.
But I can reproduce this with LO Debian package 7.4.5 and gtk3 rendering.

A workaround is to use another rendering.
- open a terminal/console
- export SAL_USE_VCLPLUGIN=gen
- soffice --impress

It makes me think about tdf#150291 but this one should be fixed from 7.4.1
Comment 2 Caolán McNamara 2023-02-07 20:33:03 UTC
There was another fix at the time which wasn't backported as it was a little risky. I can reproduce this case in 7-4 and can do a safer backportable fix.
Comment 3 Caolán McNamara 2023-02-07 20:40:06 UTC
see https://gerrit.libreoffice.org/c/core/+/146618 for the 7-4 backport
Comment 4 Commit Notification 2023-02-08 09:01:16 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/e1e6ff49a244039bc2c2c09026ab9ca3ef96e859

tdf#153434 crash on "new" macro with no cursor

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Julien Nabet 2023-02-08 10:08:11 UTC
I don't reproduce the crash with master sources updated today.
Thank you Caolán!
Comment 6 Commit Notification 2023-02-08 13:14:43 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/d6f6855c68f0e24d81b18b86c2d8c10229e29a98

tdf#153434 crash on "new" macro with no cursor

It will be available in 7.5.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2023-02-08 13:15:46 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-4":

https://git.libreoffice.org/core/commit/d08480bcdb6cf8d8a6e171f06ada33d19cb19e21

tdf#153434 crash on "new" macro with no cursor

It will be available in 7.4.6.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.