tdf#153434 crash on "new" macro with no cursor

probably good in trunk since:

commit 6e2bd11251afbe64f9889ede36b28b00f47aaff5
Date:   Sun Aug 7 12:49:11 2022 +0100

    tdf#150291 Revert "Fix crash when no valid EntryDescriptor found"

but still visible in 7-4

Change-Id: I63898ed3e33f73f8a93528872449539c5df6574f
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/146645
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>